--- a/basic-jdbc/pom.xml
+++ b/basic-jdbc/pom.xml
@@ -15,5 +15,9 @@
   		<groupId>com.h2database</groupId>
   		<artifactId>h2</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.postgresql</groupId>
+  		<artifactId>postgresql</artifactId>
+  	</dependency>
   </dependencies>
 </project>
