--- a/basic-oauth2/src/main/resources/application.yml
+++ b/basic-oauth2/src/main/resources/application.yml
@@ -1,20 +1,23 @@
 # Read after application.properties?
 server:
   port: 8999
-# Security settings
-security:
-  oauth2:
-    client:
-      clientId: 
-      clientSecret: 
-      accessTokenUri: https://graph.facebook.com/oauth/access_token
-      userAuthorizationUri: https://www.facebook.com/dialog/oauth
-      tokenName: oauth_token
-      authenticationScheme: query
-      clientAuthenticationScheme: form
-    resource:
-      userInfoUri: https://graph.facebook.com/me
+# Authentication and Resource server endpoints for each oauth provider
+facebook:
+  client:
+    clientId: 
+    clientSecret: 
+    accessTokenUri: https://graph.facebook.com/oauth/access_token
+    userAuthorizationUri: https://www.facebook.com/dialog/oauth
+    tokenName: oauth_token
+    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://graph.facebook.com/me
       
 logging:
   level:
     org.springframework.security: DEBUG
+    
+spring:
+  main:
+    allow-bean-definition-overriding: true
