--- a/basic-oauth2/src/main/resources/application.yml
+++ b/basic-oauth2/src/main/resources/application.yml
@@ -13,6 +13,18 @@ facebook:
     clientAuthenticationScheme: form
   resource:
     userInfoUri: https://graph.facebook.com/me
+
+github:
+  client:
+    clientId: 
+    clientSecret: 
+    accessTokenUri: https://github.com/login/oauth/access_token
+    userAuthorizationUri: https://github.com/login/oauth/authorize
+#    tokenName: oauth_token
+#    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.github.com/user
       
 logging:
   level:
