--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,7 @@
 		<module>basic-oauth2</module>
 		<module>bean-life-cycle</module>
 		<module>GoogleOAuth2OpenIdRestAPI</module>
+		<module>basic-spring-data-redis</module>
+		<module>spring-session-redis</module>
 	</modules>
 </project>
